adding last updates to aAbout-me

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ text-decoration: none;
 color: #682b1d;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 font-weight: bolder;
-
+font-size: 20px;
 }
 body main section {
     width: 100%;
@@ -52,17 +52,41 @@ body main section {
     text-shadow: #837e51;
     color: #682b1d;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    margin-bottom: 20%;
+    margin-bottom: 100px;
     
 }
 body main p {
         
         color: #682b1d;
         font-family:Verdana, Geneva, Tahoma, sans-serif;
-        padding-bottom:  10%;
+        display: inline-block;
+        width: 70%;
+       border-bottom: #682b1d;
+       border-style: dotted;
+       padding: 45px;
+       font-size: 20px;
 }
+
+.style {
+font-family: fantasy;
+font-size: 30px;
+}
+body footer {
+    margin-top: 100px;
+margin-bottom: 100px;
+}
+body footer div{
+    margin-bottom:100px;
+    margin-left: 10px;
+}
+
 body footer li {
     color: #682b1d;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-margin: 50px;
+margin-left: 5px;
+margin-bottom:20px ;
 }
+footer strong{
+font-size: 20px;
+}
+
